# epass_flasher

./: .gitignore  devicetree.dtb  devicetree.dts  dt_patcher.py  flasher.py  interact.py  main.py  main.spec  pyproject.toml  readme.md  requirements.txt
configs/: 0.2.py  0.3.1-0.4.py  0.3.1.py  0.5.py  0.6.py
dts/: devicetree_0.2.dts  devicetree_0.2.dts.orig  devicetree_0.3.dts  devicetree_0.3.dts.orig
dts/append/: mostima.dtsa
dts/st7701_initseq/: st7701_BOE.dtsa  st7701_hannstar.dtsa
tools/: preprocess_dts.py
